# overdoc

./: ARCHITECTURE.md  Cargo.toml  README.md  overdoc.yaml
plan/: README.md  phase3_version_control.md  phase4_optimization.md
plans/: phase1_foundation.md  phase2_documentation.md  phase5_testing.md
src/: config.rs  dependencies.rs  exports.rs  filter.rs  main.rs  metrics.rs  traversal.rs
